# auto-spark-session

./: .gitignore  .mypy  Makefile  README.md  auto_spark_session.py  det_util.py  pyproject.toml  setup.py  test_det_util.py  test_det_util.yaml
docker/: Dockerfile
examples/read_data/: read_data.py  read_data.yaml
examples/write_data/: startup-hook.sh  write_data.py  write_data.yaml
src/: auto_spark_session.py
tests/exp_context/: startup-hook.sh  test_multiple_storage_accounts.py  test_multiple_storage_accounts.yaml  test_notebook.ipynb  test_notebook_execution.py  test_notebook_execution.yaml  test_read_retaildata0_purchases.py  test_read_retaildata0_purchases.yaml
