[project]
name = "auto_spark_session"
version = "0.0.2"
authors = [
  { name="Tim Tucker", email="varlogtim@gmail.com"},
  { name="Nolan Chan", email="channolanp@gmail.com"},
]
description = "Easily create a spark session"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
